--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bundler</title>
+    <meta
+      property="description"
+      content="Frontend Mentor Challenge | Coding Bootcamp Testimonials Slider."
+    />
+    <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
     <script mudule defer src="./assets/index.js"></script>
   </head>
-  <body>
-    <main id="root"></main>
-  </body>
+  <body id="root"></body>
 </html>
