Tanya's testimonial mobile. Setted.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
     />
     <script mudule defer src="./assets/index.js"></script>
   </head>
-  <body id="root"></body>
+  <body >
+    <section class="testimonial">
+      <h1 class="sr-only">Coding Bootcamp Testimonial Slider</h1>
+      <div id="root"></div>
+    </section>
+  </body>
 </html>
