--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <script mudule defer src="./assets/index.js"></script>
   </head>
   <body >
-    <section class="testimonial">
-      <h1 class="sr-only">Coding Bootcamp Testimonial Slider</h1>
-      <div id="root"></div>
-    </section>
+      <main id="root"></main>
   </body>
 </html>
