Wooooooooooooohoo!!!! oop-coding-bootcamp. Done.

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      property="description"
+      name="description"
       content="Frontend Mentor Challenge | Coding Bootcamp Testimonials Slider."
     />
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
@@ -18,11 +17,11 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
-    <script mudule defer src="./assets/index.js"></script>
+    <script defer src="./index.js"></script>
   </head>
-  <body >
-      <main id="root"></main>
+  <body>
+    <main id="root"></main>
   </body>
 </html>
